Is now usable and wow am I wasting my time